--- a/src/translations/ua.json
+++ b/src/translations/ua.json
@@ -8,6 +8,8 @@
     "competitions": "Турніри"
   },
   "common": {
-    "search": "Пошук"
+    "search": "Пошук",
+    "sign_up": "Реєстрація",
+    "log_in": "Увійти"
   }
 }
